--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -465,7 +465,7 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid red; 
+    
 }
 
 .pres-container h2{
@@ -475,10 +475,11 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
 }
 
 .pres-info {
+    font-size: 1rem;
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-bottom: 20px;
+    
 }
 
 .pres-image {
@@ -496,12 +497,12 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
     align-self: center;
 }
 
-.pres-details{
-    border: 1px solid white;
-}
+
 .pres-details p {
+    display: flex; 
+    align-items: center;
     margin: 5px 0;
-    font-size: 0.7em;
+    font-size: 1.5em;
 }
 
 .pres-description {
@@ -607,11 +608,11 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
   .rating-container {
     margin: 0 auto;
     text-align: center;
-    border: 1px solid #ddd;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 300px;
+    min-width: 500px;
   }
 
   .rating-container h1 {
