deployment and path correction

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,8 @@
 {% block title %} Presidential Timeline {% endblock %}
 
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}"> 
+<!-- link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}"-->
+<link rel="stylesheet" href="static/css/home.css"> 
 
 <header>
     <img src="../static/img/dec_of_ind.jpg" alt="Banner Image">
