--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -31,11 +31,11 @@
             </a>    
         </div>
         <ul class="nav-menu">
-            <li> <a href="/"> Home</a></li>
-            <li> <a href="/timeline"> Timeline</a></li>
-            <li> <a href="/game"> Game</a></li>
-            <li> <a href="/rank"> Rank</a></li>
-            <li> <a href="/about"> About</a></li>
+            <li> <a href="home"> Home</a></li>
+            <li> <a href="timeline"> Timeline</a></li>
+            <li> <a href="game"> Game</a></li>
+            <li> <a href="rank"> Rank</a></li>
+            <li> <a href="about"> About</a></li>
             <li> <button class="switch-mode">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
@@ -47,7 +47,7 @@
 
     <nav id="hamburger-nav">
         <div class="logo">
-            <a href="/"> Mr.President</a> 
+            <a href="home"> Mr.President</a> 
         </div>
 
         <div class="hamburger-icon" onclick="toggleMenu()">
@@ -65,11 +65,11 @@
                     </a>
                    
                 </li>
-                <li><a href="/" onclick="toggleMenu()">Home</a></li>
-                <li><a href="/timeline" onclick="toggleMenu()">Timeline</a></li>
-                <li><a href="/game" onclick="toggleMenu()">Game</a></li>
-                <li><a href="/rank" onclick="toggleMenu()">Rank</a></li>
-                <li><a href="/about" onclick="toggleMenu()">About</a></li>
+                <li><a href="home" onclick="toggleMenu()">Home</a></li>
+                <li><a href="timeline" onclick="toggleMenu()">Timeline</a></li>
+                <li><a href="game" onclick="toggleMenu()">Game</a></li>
+                <li><a href="rank" onclick="toggleMenu()">Rank</a></li>
+                <li><a href="about" onclick="toggleMenu()">About</a></li>
                 <li> <button class="switch-mode">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
