--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -13,9 +13,13 @@
             document.documentElement.classList.add('lightMode');
         }
     </script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+   <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mediaqueries.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/aboutStyles.css') }}">
+    -->
+    <link rel="stylesheet" href="static/css/style.css">  
+    <link rel="stylesheet" href="static/css/mediaqueries.css"> 
+    <link rel="stylesheet" href="static/css/aboutStyles.css"> 
 
     <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
    
