--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mediaqueries.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/aboutStyles.css') }}">
     -->
-    <link rel="stylesheet" href="static/css/style.css">  
+    <link rel="stylesheet" href="static/css/styles.css">  
     <link rel="stylesheet" href="static/css/mediaqueries.css"> 
-    <link rel="stylesheet" href="static/css/aboutStyles.css"> 
+    <link rel="stylesheet" href="static/css/aboutstyles.css"> 
 
     <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
    
