--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/aboutstyles.css') }}">
 <section id="section__about">
     <div class="about__purpose">
-        <img src="{{ url_for('static', filename='img/whiteHouse.avif') }}" alt="psdf" class="whiteHouse">
+        <img src="{{ url_for('mrpresident', filename='static/img/whiteHouse.avif') }}" alt="psdf" class="whiteHouse">
                      
         <h1>Purpose</h1>
         <p>
