--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -3,7 +3,7 @@
 
 {% block title %} Presidential Timeline {% endblock %}
 {% block style%}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/profiles.css') }}"> 
+<link rel="stylesheet" href="static/css/profiles.css"> 
 {% endblock%}
 
 
@@ -58,7 +58,7 @@
    <script src = "{{ url_for('static', filename='script/styles.js') }}" defer></script> 
   --> 
 
-   <link src="static/script/styles.js" der> 
+   <link src="static/script/styles.js" defer> 
    <link src="static/script/profiles.js" defer> 
    {% endblock %}
 
