--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -58,7 +58,7 @@
    <script src = "{{ url_for('static', filename='script/styles.js') }}" defer></script> 
   --> 
 
-   <link src="static/script/styles.js" defer> 
+   <link src="static/script/script.js" defer> 
    <link src="static/script/profiles.js" defer> 
    {% endblock %}
 
