--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,13 +21,13 @@
     <div class = 'row'>
         <div class="item">
             <a href="/timeline">
-            <img src="{{ url_for('static', filename='img/timeline.png') }}" alt="timelines">
+            <img src="static/img/timeline.png" alt="timelines">
             </a>
             <a href="/timeline">Timeline</a>
         </div>
         <div class="item">
             <a href="/game">
-            <img src="{{ url_for('static', filename='img/mc.png') }}" alt="mc">
+            <img src="static/img/mc.png" alt="mc">
             </a>
             <a href="/game">Game</a>
         </div>
@@ -35,13 +35,14 @@
     <div class = 'row'>
         <div class="item">
             <a href="/rank">
-            <img src="{{ url_for('static', filename='img/ranking.png') }}" alt="pf">
+            <img src="static/img/ranking.png" alt="pf">
             </a>
             <a href="/rank">Rank</a>
         </div>
         <div class="item">
             <a href="/about">
-            <img src="{{ url_for('static', filename='img/about.png') }}" alt="About">
+            <img src="static/img/about.png" alt="about">
+           
             </a>
             <a href="/about">About</a>
         </div>
