--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="static/css/home.css"> 
 
 <header>
-    <img src="../static/img/dec_of_ind.jpg" alt="Banner Image">
+    <img src="static/img/dec_of_ind.jpg" alt="Banner Image">
 </header>
 <main>
     <div class = "description-cont">
