--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -105,9 +105,8 @@
         </div>
         </footer>
      
-
-   <script src="{{ url_for('static', filename='script/script.js') }}"></script>
-   <script src = "{{ url_for('static', filename='script/lightmode.js') }}" defer></script>
-
+   <link src="static/script/script.js"> 
+   <link src="static/script/lightmode.js" defer> 
+   
 </body>
 </html>
