--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -105,8 +105,8 @@
         </div>
         </footer>
      
-   <link src="static/script/script.js"> 
-   <link src="static/script/lightmode.js" defer> 
-   
+    <script src="static/script/script.js"></script>
+    <script src="static/script/lightmode.js" defer></script>
+        
 </body>
 </html>
