--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -58,8 +58,9 @@
    <script src = "{{ url_for('static', filename='script/styles.js') }}" defer></script> 
   --> 
 
-   <link src="static/script/script.js" defer> 
-   <link src="static/script/profiles.js" defer> 
+  <script src="static/script/script.js"></script>
+  <script src="static/script/lightmode.js" defer></script>
+  
    {% endblock %}
 
 
