--- a/app/templates/pres_profile.html
+++ b/app/templates/pres_profile.html
@@ -48,5 +48,9 @@
 
 {% endblock %}
 
-{% block script%} <script src = "{{ url_for('static', filename='script/rating.js') }}" defer></script>
+{% block script%} 
+
+<script src="static/script/rating.js"></script>
+
+
 {% endblock %}
