fixing our feature

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -31,7 +31,7 @@
     <nav id="desktop-nav">
         <div class='logo'> 
             <a href="/">
-                <img src="{{ url_for('static', filename='img/MrPresident.png') }}" alt="Mr. President Logo" class="logo-image" style="width: 100px; height: auto; max-height: 100px;">
+                <img src="static/img/MrPresident.png" alt="Mr. President Logo" class="logo-image" style="width: 100px; height: auto; max-height: 100px;">
             </a>    
         </div>
         <ul class="nav-menu">
