--- a/app/templates/game/guess_game.html
+++ b/app/templates/game/guess_game.html
@@ -3,7 +3,7 @@
 {% block title %} About Mr. President {% endblock %}
 {% block viewport%}  <meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock%}
 {% block  style %} 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/game2.css') }}"> 
+<link rel="stylesheet" href="static/css/game2.css"> 
 
 {%endblock%}
 {% block content %}
@@ -24,6 +24,6 @@
 {% endblock %}
 
    {% block script%}
-   <script src="{{ url_for('static', filename='script/game2.js') }}"></script>
+   <script src="static/script/game2.js"></script>
    {% endblock %}
    
