--- a/app/templates/game/quiz_game.html
+++ b/app/templates/game/quiz_game.html
@@ -2,7 +2,7 @@
 
 {% block viewport%}  <meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock%}
 {% block  style %} 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/game.css') }}"> 
+<link rel="stylesheet" href="static/css/game.css"> 
 
 {%endblock%}
 {% block content %}
@@ -21,5 +21,5 @@
 {% endblock %}
 
 {% block script%}
-<script src="{{ url_for('static', filename='script/game.js') }}"></script>
+<script src="static/script/game.js"></script>
 {% endblock %}
