fixed president profile page

--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -58,6 +58,7 @@
    <script src = "{{ url_for('static', filename='script/styles.js') }}" defer></script> 
   --> 
 
+  <script src="static/script/profiles.js"></script>
   <script src="static/script/script.js"></script>
   <script src="static/script/lightmode.js" defer></script>
   
