--- a/app/templates/pres_profile.html
+++ b/app/templates/pres_profile.html
@@ -1,10 +1,11 @@
 {% extends 'layout.html' %}
 
-{% block viewport%}  <meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock%}
-
-{% block  style %} 
-<link rel="stylesheet" href="static/css/styles.css">
-{%endblock%}
+{% block viewport %}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% endblock %}
+{% block style%}
+<link rel="stylesheet" href="hello/static/css/profiles.css"> 
+{% endblock%}
 {% block title %} About {{ president['Name'] }}{% endblock %}
 
 {% block content %}
@@ -53,8 +54,5 @@
 {% endblock %}
 
 {% block script%} 
-
 <script src="static/script/rating.js"></script>
-
-
 {% endblock %}
