test my featuer

--- a/app/templates/pres_profile.html
+++ b/app/templates/pres_profile.html
@@ -10,7 +10,8 @@
 <div class="pres-container">
     <h2>{{ president["Name"] }}</h2>
     <div class = 'pres-info'>
-    <img src="{{president['IMG filepath']}}"  alt="{{ president['Name'] }}" class="pres-image">
+    <img src="static/img/1_Washington.jpeg" alt="{{ president['Name'] }}" class="pres-image">
+
         <div class="pres-details">
             <p> <b>President Number</b>: {{ president["No"] }}</p>
             <p><b>Years Served</b>: {{ president["Term Years"] }}</p>
