--- a/app/templates/pres_profile.html
+++ b/app/templates/pres_profile.html
@@ -10,8 +10,7 @@
 <div class="pres-container">
     <h2>{{ president["Name"] }}</h2>
     <div class = 'pres-info'>
-    <img src="/mrpresident/{{president['IMG filepath']}}" alt="{{ president['Name'] }}" class="pres-image">
-    <h1>{{president['IMG filepath']}}</h1>
+    <img src="{{president['IMG filepath']}}" alt="{{ president['Name'] }}" class="pres-image">
 
         <div class="pres-details">
             <p> <b>President Number</b>: {{ president["No"] }}</p>
