--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -52,14 +52,9 @@
    {% endblock %}
 
    {% block script%} 
-  <!-- 
-  <script src = "{{ url_for('static', filename='script/profiles.js') }}" defer></script>
-   
-   <script src = "{{ url_for('static', filename='script/styles.js') }}" defer></script> 
-  --> 
 
   <script src="static/script/profiles.js"></script>
-  <script src="static/script/script.js"></script>
+  <script src="static/script/script.js" defer></script>
   <script src="static/script/lightmode.js" defer></script>
   
    {% endblock %}
