--- a/www/static/css/timelineStyles.css
+++ b/www/static/css/timelineStyles.css
@@ -117,4 +117,4 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
 /* Link to the Tutorial :  https://www.youtube.com/watch?v=0TnO1GzKWPc&t=82s */
 
 
-
+/* timelines tyles */
