--- a/www/static/css/aboutstyles.css
+++ b/www/static/css/aboutstyles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,500;1,6..96,500&display=swap');
-
+/* about */
 h1{
     font-size: 50px;
     font-style: italic;
