--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -20,13 +20,13 @@
     <div class="container">
     <div class = 'row'>
         <div class="item">
-            <a href="/timeline">
+            <a href="timeline">
             <img src="static/img/timeline.png" alt="timelines">
             </a>
-            <a href="/timeline">Timeline</a>
+            <a href="timeline">Timeline</a>
         </div>
         <div class="item">
-            <a href="/game">
+            <a href="game">
             <img src="static/img/mc.png" alt="mc">
             </a>
             <a href="/game">Game</a>
@@ -34,17 +34,17 @@
     </div>
     <div class = 'row'>
         <div class="item">
-            <a href="/rank">
+            <a href="rank">
             <img src="static/img/ranking.png" alt="pf">
             </a>
-            <a href="/rank">Rank</a>
+            <a href="rank">Rank</a>
         </div>
         <div class="item">
-            <a href="/about">
+            <a href="about">
             <img src="static/img/about.png" alt="about">
            
             </a>
-            <a href="/about">About</a>
+            <a href="about">About</a>
         </div>
     </div>
     </div>
