fixing the game

--- a/app/templates/game/game.html
+++ b/app/templates/game/game.html
@@ -12,11 +12,11 @@
     <h1>Test your Knowledge</h1>
     <div class= "games-container ">
         <div class= "quiz-game">
-         <a href="game/1"> Quiz Game</a>
+         <a href="game1"> Quiz Game</a>
          <img src="static/img/Quiz.webp" alt="pf">
         </div>
         <div class= "guess-game"> 
-            <a href="game/2"> Guess Game</a> 
+            <a href="game2"> Guess Game</a> 
             <img src="static/img/Guess.webp" alt="pf">
         
         </div>
