--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -100,7 +100,8 @@
             </div>
         </div>
         </footer>
-     
+    
+    <script src="static/script/profiles.js"></script>
     <script src="static/script/script.js"></script>
     <script src="static/script/lightmode.js" defer></script>
         
